# rubybot

./: .env  .gitignore  LICENSE  README.md  Ruby_Doc.md  main.py  pyproject.toml  requirements.txt  run.sh
frontend/: README.md  app.py
ruby/: ruby_mainframe.py
ruby_rag/: README.md
test/: rag_test.py  stt_test.py  tts_test.py
utiles/: README.md  prompt.py  rag_utiles.py  ruby_tools.py  stt.py  toolbox.py  tts.py
